welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:9: error: value =< is not a member of Int
  if (d=<0) {return 0}
       ^caughtSpeeding:10: error: value =< is not a member of Int
  else if (d>0 && e=<0) {return 1}
                   ^